# racionador-supri

./: CHANGELOG.md  LICENSE  README.md  dados.json  pyproject.toml
.github/workflows/: ci.yml
src/racionador/: __main__.py  cli.py  modelos.py  persistencia.py  racionamento.py
tests/: test_modelos.py  test_persistencia.py  test_racionamento.py
