[project]
name = "racionador-supri"
version = "1.0.0"
description = "Racionamento de suprimentos em zonas de conflito humanitário"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Guilherme Holanda", email = "guilhermeholanda012@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
racionador = "racionador.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"